--- a/jobs/traefik/templates/ctl.erb
+++ b/jobs/traefik/templates/ctl.erb
@@ -17,11 +17,13 @@ case $1 in
       traefik_address = p("port")
       traefik_read_only = p("read_only")
     %>
-    "[<%= traefik_mode %>]" > ${RUN_DIR}/traefik.toml
-    "address = \":<%= traefik_address %>\"" >> ${RUN_DIR}/traefik.toml
-    "readOnly = <%= traefik_mode %>" >> ${RUN_DIR}/traefik.toml
+    echo "[<%= traefik_mode %>]" > ${RUN_DIR}/traefik.toml
+    echo "" >> ${RUN_DIR}/traefik.toml
+    echo "address = \":<%= traefik_address %>\"" >> ${RUN_DIR}/traefik.toml
+    echo "" >> ${RUN_DIR}/traefik.toml
+    echo "readOnly = <%= traefik_read_only %>" >> ${RUN_DIR}/traefik.toml
 
-    exec chpst -u vcap:vcap /var/vcap/packages/traefik/bin/traefik \
+    exec chpst /var/vcap/packages/traefik/traefik \
       -c ${RUN_DIR}/traefik.toml \
       1>>$LOG_DIR/traefik.stdout.log \
       2>>$LOG_DIR/traefik.stderr.log
