use traefik_mode variable in erb template

--- a/jobs/traefik/templates/traefik.toml.erb
+++ b/jobs/traefik/templates/traefik.toml.erb
@@ -4,8 +4,7 @@
     raise ArgumentError, "Expected mode to be 'web' but was: '#{traefik_mode}'"
   end
 %>
-
-[<%= p("mode") %>]
+[<%= traefik_mode %>]
 
 address = ":<%= p("port") %>"
 
